all: refactor benchmarks to be unified and runnable from IDE (#135)